Sidebar completed (not responsive) + Fixed top button, bar, album items
Still working on responsive & more styling

--- a/styles/main.css
+++ b/styles/main.css
@@ -32,7 +32,7 @@ h2 {
 
 h5 {
   margin: 0;
-  padding: 0;
+  padding: 0 0 10px;
   color: #fff;
   font-size: 13px;
 }
@@ -97,6 +97,8 @@ h5 {
 
 .u-overlay:hover {
   opacity: 1;
+  cursor: pointer;
+  transition: .2s ease;
 }
 
 .u-overlay i {
@@ -106,6 +108,7 @@ h5 {
   transform: translate(-50%,-50%);
   text-align: center;
   font-size: 50px;
+  cursor: pointer;
 }
 
 .u-bar {
@@ -117,7 +120,8 @@ h5 {
 }
 
 .u-bar--long {
-  width: 580px;
+  width: 30vw;
+  max-width: 580px;
 }
 
 .u-bar::after,
@@ -158,11 +162,11 @@ h5 {
 }
 
 .button {
-  padding: 10px;
+  padding: 12px 40px;
   background: transparent;
   border: 1px solid #fff;
   border-radius: 20px;
-  font-size: 12px;
+  font-size: 10.5px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -205,6 +209,10 @@ h5 {
   border-color: #ADFE2D;
 }
 
+#sidebar .main-buttons a.active span {
+  color: #ccc;
+}
+
 #sidebar .sidebar-top {
   flex-grow: 1;
 }
@@ -215,6 +223,7 @@ h5 {
 
 .main-buttons {
   justify-content: center;
+  padding-bottom: 15px;
 }
 
 .main-buttons > a {
@@ -233,8 +242,81 @@ h5 {
   padding-right: 8px;
 }
 
-.sidebar-bottom {
+.playlist-items > a {
+  padding-bottom: 20px;
+}
 
+.create-playlist {
+  display: flex;
+  align-items: center;
+}
+
+.create-playlist-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  margin-right: 8px;
+  background-color: #ccc;
+  font-size: 17px;
+}
+
+#sidebar .sidebar-bottom {
+  margin-left: 20px;
+  margin-right: 18px;
+}
+
+#sidebar .install-label {
+  margin-bottom: 10px;
+}
+
+#sidebar a.install-label {
+  padding-bottom: 10px;
+  border-bottom: 1px solid;
+}
+
+#sidebar .sidebar-bottom,
+#sidebar a.install-label,
+#sidebar .account-name {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+#sidebar .install-label i {
+  display: inline-block;
+  padding: 1px;
+  margin-right: 10px;
+  background: #767676;
+  border: 0.1px solid #767676;
+  border-radius: 50%;
+  font-size: 10px;
+  color: black;
+}
+
+.account-name {
+  display: flex;
+  align-items: center;
+}
+
+.account-profile-icon {
+  width: 22px;
+  height: 22px;
+  margin-right: 10px;
+  border-radius: 50%;
+  background-color: #767676;
+  overflow: hidden;
+}
+
+.account-profile-icon img {
+  width: 22px;
+  height: auto;
+  object-fit: cover;
+}
+
+a.account-name {
+  color: #fff;
+  font-weight: 600;
 }
 
 /* Content */
